--- a/assets/scss/_estilos.scss
+++ b/assets/scss/_estilos.scss
@@ -4,6 +4,11 @@
     box-sizing: border-box;
     font-family: Roboto;
 }
+@mixin flex-row-center{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
 .container{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -200,7 +205,7 @@ h1{
     }
     .cards{
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         width: 100%;
         justify-content: space-around;
         .cardInd{
