--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -7,4 +7,5 @@ $botones:(
     botonNaturales: rgb(41, 187, 12),
     botonBarnizadas: rgb(164, 241, 75),
     botonDoradas: rgb(255, 237, 79),
-)
+);
+$textShadow: 2px 2px 4px rgb(0, 0, 0);
