--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,6 +83,14 @@ h4 {
   width: 50px;
 }
 
+.botonHov {
+  color: white;
+}
+
+.botonHov:hover {
+  background-color: rgb(163, 206, 122);
+}
+
 .cards {
   display: flex;
   flex-direction: column;
@@ -196,11 +204,9 @@ h4 {
   .logo img {
     width: 45px;
   }
-
   .navbar ul li {
     font-size: 16px;
   }
-
   .cards {
     display: flex;
     flex-direction: column;
@@ -221,12 +227,10 @@ h4 {
     display: flex;
     flex-direction: row;
   }
-
   .videos iframe {
     width: 50%;
     height: 500px;
   }
-
   .trabajos {
     display: flex;
     width: 100%;
